--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
     "start": "lerna run start --stream"
   },
   "dependencies": {
-    "md-plus-client": "^1.0",
-    "md-plus-api": "^1.0"
+    "md-plus-api": "^1.0",
+    "md-plus-client": "^1.0"
   },
   "devDependencies": {
-    "lerna": "^2.1.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
@@ -26,6 +25,7 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "install": "^0.10.0",
+    "lerna": "^2.1.2",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "react-hot-loader": "^3.0.0-beta.7",
