--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,7 +4,7 @@
   "description": "A basic template for react projects.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --no-info",
     "lint": "./node_modules/.bin/eslint src/**/*.js"
   },
   "author": "Daniel Sherman",
