--- a/package.json
+++ b/package.json
@@ -3,35 +3,35 @@
     "start": "lerna run start --stream"
   },
   "dependencies": {
-    "md-plus-api": "^1.0",
-    "md-plus-client": "^1.0"
+    "md-plus-api": "^1.1.11",
+    "md-plus-client": "^1.1.9"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-config-airbnb-base": "^11.3.2",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
-    "install": "^0.10.0",
-    "lerna": "^2.1.2",
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.11.0",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "sass-loader": "^6.0.6",
+    "install": "^0.10.4",
+    "lerna": "^2.10.2",
+    "node-sass": "^4.8.3",
+    "nodemon": "^1.17.3",
+    "react-hot-loader": "^3.1.3",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.2"
   }
 }
